# commonmarker

./: .cross_rubies  .gitignore  .gitmodules  .rubocop.yml  .rubocop_todo.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.txt  Cargo.toml  Dockerfile  Gemfile  LICENSE  LICENSE.txt  Makefile  README.md  Rakefile  SECURITY.md  appveyor.yml  bake.rb  bench.rb  commonmarker.gemspec  commonmarker.rb  demo.rb  dependencies.yml  docker-compose.yml  gems.rb  license.md  markdown.rb  markly.gemspec  out.txt  qiita_marker.gemspec  readme.md  test.rb
.bundle/: config
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: automerge.yml  coverage.yaml  cruby-build-and-install.yml  development.yml  gem-install.yml  generic-build-and-install.yml  lint.yml  tag_and_release.yml  test-external.yaml  test.yaml  test.yml  test_build.yml  test_jemalloc.yml
benchmark/: benchmark.rb  compare.rb  gems.locked  gems.rb  sample.md
config/: sus.rb
ext/cmark/: extconf.rb
ext/commonmarker/: Cargo.toml  _cflags.rb  _clean.rb  _comrak.rb  _config.rb  _dependencies.rb  _help.rb  _util.rb  build.rs  cmark-gfm_version.h  cmark_version.h  commonmarker.c  commonmarker.h  config.h  extconf.rb  scanners.c  scanners.re  table.c
ext/commonmarker/src/: comrak_options.rs  lib.rs  node.rs  options.rs  plugins.rs  utils.rs
ext/commonmarker/src/plugins/: syntax_highlighting.rs
ext/markly/: extconf.rb  markly.c  markly.h  scanners.c  scanners.re
ext/qiita_marker/: autolink.c  blocks.c  (+15 more)
fixtures/: markdown_spec.rb
lib/: commonmarker.rb  markly.rb  qiita_marker.rb
rakelib/: benchmark.rake  clean.rake  compile.rake  docs.rake  extension.rake  extensions.rake  format.rake  lint.rake  package.rake  set-version-to-timestamp.rake  test.rake
script/: bootstrap  build-gems  changelog  cibuild  cibuild.cmd  fetch_shasum256  generate_changelog  single_test  test-gem-build  test-gem-file-contents  test-gem-install  test-gem-installation  test-has-rust  update_submodules
tasks/: qiita_marker.rake
test/: alert_test.rb  basic_test.rb  basics_test.rb  bench.rb  benchmark.rb  config_test.rb  encoding_test.rb  escaped_char_spans_test.rb  extensions_test.rb  footnotes_test.rb  frontmatter_test.rb  ignore_setext_test.rb  linebreaks_test.rb  maliciousness_test.rb  math_test.rb  multiline_block_quotes_test.rb  node_test.rb  parser_test.rb  pathological_inputs_test.rb  relaxed_autolinks_test.rb  rendering_test.rb  smartpunct_test.rb  sourcepos_test.rb  spec_test.rb  spec_tests.json  syntax_highlighting_test.rb  tasklists_test.rb  test.rb  test_attributes.rb  test_basics.rb  test_commands.rb  test_commonmark.rb  test_doc.rb  test_encoding.rb  test_extensions.rb  test_footnotes.rb  test_frontmatter.rb  test_gc.rb  test_helper.rb  test_linebreaks.rb  (+17 more)
test-old/: maliciousness.rb  pathological_inputs.rb
(+47 files in other folders)
