[package]
name = "commonmarker"
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"
publish = false

[dependencies]
magnus = { version = "0.7", features = ["rb-sys"] }
rb-sys = { version = "*", default-features = false, features = [
    "stable-api-compiled-fallback",
] }
comrak = { version = "0.35", features = ["shortcodes"] }
syntect = { version = "5.2", features = ["plist-load"] }
typed-arena = "2.0"
rctree = "0.6"

[lib]
name = "commonmarker"
crate-type = ["cdylib"]
